--- a/index.html
+++ b/index.html
@@ -1,18 +1,28 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="aula.css">
     <title>Document</title>
 </head>
-
 <body>
-    <section class="principal">
-        <h1> Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único. </h1>
-        <img id="img1" src="Combo.png">
-   </section>
-</body>
+<section class="principal">
+        <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
+        
+    <div id="combo">
+        <img src ="Combo.png">
+    </div>
 
+    <div id="botao">
+        <img id="botao" src="./Button.png">
+    </div>
+
+    <div id="botao2">
+        <img id="botao2" src="./Button (1).png">
+    </div>
+</section>
+
+</body>
 </html>
