--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="aula.css">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
 <section class="principal">
         <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
-        
+
     <div id="combo">
         <img src ="Combo.png">
     </div>
@@ -21,6 +21,10 @@
 
     <div id="botao2">
         <img id="botao2" src="./Button (1).png">
+    </div>
+
+    <div id="background">
+        <img id="background" src="./Background.png">
     </div>
 </section>
 
